--- a/Projects/Day 24/index.html
+++ b/Projects/Day 24/index.html
@@ -15,13 +15,15 @@
             <nav id="nav-bar">
                 <ul>
                     <li><a id="nav-link" href="">Features</a></li>
-                    <li><a id="nav-link" href="">How It Works</a></li>
+                    <li><a id="nav-link" href="">How Its Made</a></li>
                     <li><a id="nav-link" href="">Pricing</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div class="hero"></div>
+            <div class="hero">
+                <img src="placeholder"
+            </div>
         </main>
     </body>
 </html>
