Update Navbar for Responsiveness

--- a/Projects/Day 24-27/index.html
+++ b/Projects/Day 24-27/index.html
@@ -12,16 +12,21 @@
 
     <body>
         <header>
-            <a href="#hero"><img src="logo.png" class="logo-image"/></a>
-            <h1 class="logo-text">Captain's Cookies</h1>
-            <nav>
-                <ul>
-                    <li><a href="#products">PRODUCTS</a></li>
-                    <li><a href="#howitsmade">VIDEO</a></li>
-                    <li><a href="#pricing">PRICING</a></li>
-                </ul>
-            </nav>
+            <div class="container container-nav">
+                <div class="headings">
+                    <a href="#hero"><img src="logo.png" class="logo-image"/></a>
+                    <h1 class="logo-text">Captain's Cookies</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#products">PRODUCTS</a></li>
+                        <li><a href="#howitsmade">VIDEO</a></li>
+                        <li><a href="#pricing">PRICING</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+
         <main>
             <div id="hero" class="hero">
                 <div class="hero-wrapper">
@@ -59,7 +64,7 @@
                 <div class="pricing-wrap">
                     <div class="p1">
                         <div class="p1h">
-                            <h2>Private Rank</h2>
+                            <h2>Private</h2>
                         </div>
                         <div class="p1t">
                             <h2 class="price">₱100</h2>
@@ -69,7 +74,7 @@
                     </div>
                     <div class="p2">
                         <div class="p2h">
-                            <h2>Sergeant Rank</h2>
+                            <h2>Sergeant</h2>
                         </div>
                         <div class="p2t">
                             <h2 class="price">₱180</h2>
@@ -79,7 +84,7 @@
                     </div>
                     <div class="p3">
                         <div class="p3h">
-                            <h2>Colonel Rank</h2>
+                            <h2>Colonel</h2>
                         </div>
                         <div class="p3t">
                             <h2 class="price">₱250</h2>
