--- a/Projects/Day 24-27/index.html
+++ b/Projects/Day 24-27/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Rammetto+One&display=swap" rel="stylesheet">
-
+        <title>Captain's Cookies</title>
     </head>
 
     <body>
